--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,39 +11,52 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REACT_APP_BASE_URL: http://localhost:5000/api
+      UI_BASE: http://localhost:3000
+      CI: true
     steps:
       - uses: actions/checkout@v4
-      - name: Setup Node
+
+      - name: Node setup (monorepo cache)
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
+          cache-dependency-path: |
+            backend/package-lock.json
+            frontend/package-lock.json
+
       - name: Install backend deps
         working-directory: backend
         run: npm install
+
       - name: Install frontend deps
         working-directory: frontend
         run: npm install
+
       - name: Start backend
         working-directory: backend
         run: node server.js &
+      
       - name: Wait for backend
         run: npx wait-on tcp:5000
         working-directory: frontend
+
       - name: Start frontend (React dev server)
         working-directory: frontend
-        env:
-          CI: true
         run: npm start &
+      
       - name: Wait for frontend
         working-directory: frontend
         run: npx wait-on http://localhost:3000
+
       - name: Run unit tests
         working-directory: frontend
         run: npm test -- --watchAll=false
-      - name: Run selenium UI tests
+
+      - name: Run Selenium UI tests
         working-directory: frontend
         run: npm run selenium:all
+
       - name: Artifact placeholder
         if: always()
-        run: echo "Upload coverage or logs here if configured"
+        run: echo "Add coverage upload here"
