--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,19 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REACT_APP_BASE_URL: http://localhost:5000/api
-      UI_BASE: http://localhost:3000
       CI: true
     steps:
       - uses: actions/checkout@v4
 
-      - name: Node setup (monorepo cache)
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: npm
-          cache-dependency-path: |
-            backend/package-lock.json
-            frontend/package-lock.json
 
       - name: Install backend deps
         working-directory: backend
@@ -34,28 +29,19 @@ jobs:
         working-directory: frontend
         run: npm install
 
-      - name: Lint (frontend)
-        working-directory: frontend
-        run: |
-          npx eslint . || echo "Lint warnings (not failing build)"
-
-      - name: Build frontend
-        working-directory: frontend
-        run: npm run build
-
-      - name: Backend syntax check
-        if: hashFiles('backend/**/*.js') != ''
-        run: node -c backend/server.js || echo "Node -c not strict; continuing"
-
       - name: Start backend
         working-directory: backend
         run: node server.js &
-      
+
       - name: Wait for backend
         run: npx wait-on tcp:5000
         working-directory: frontend
 
-      - name: Start frontend (dev server for Selenium)
+      - name: Run unit tests (frontend)
+        working-directory: frontend
+        run: npm test -- --watchAll=false
+
+      - name: Start frontend (for Selenium)
         working-directory: frontend
         run: npm start &
 
@@ -63,25 +49,9 @@ jobs:
         working-directory: frontend
         run: npx wait-on http://localhost:3000
 
-      - name: Run unit tests
-        working-directory: frontend
-        run: npm test -- --watchAll=false
-
-      - name: Run Selenium UI tests
+      - name: Run Selenium tests
         working-directory: frontend
         run: npm run selenium:all
 
-      - name: Security audit (report only)
-        working-directory: frontend
-        run: npm audit --audit-level=high || true
-
-      - name: Archive build + reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: ci-artifacts
-          path: |
-            frontend/build
-            frontend/coverage
-            test/jmeter/report
-          if-no-files-found: ignore
+      - name: Finish
+        run: echo "CI pipeline completed"
