--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.17.1",
-    "axios": "^1.10.0",
+  "axios": "1.6.8",
   "react": "^18.2.0",
   "react-dom": "^18.2.0",
   "react-router-dom": "^6.23.0",
