--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,66 +7,49 @@ on:
     branches: [ main, master ]
 
 jobs:
-  backend-tests:
+  build-and-test:
     runs-on: ubuntu-latest
-    defaults:
-      run:
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+          
+      # Build: Backend dependencies and check
+      - name: "Build: Install backend dependencies"
+        run: npm install
         working-directory: backend
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Install backend deps
+        
+      - name: "Build: Backend syntax check"
+        run: node -c server.js
+        working-directory: backend
+        
+      # Build: Frontend dependencies and build
+      - name: "Build: Install frontend dependencies"  
         run: npm install
-      - name: Lint placeholder
-        run: echo "No backend tests yet"
-
-  frontend-tests:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
         working-directory: frontend
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Install frontend deps
-        run: npm install
-      - name: Run unit tests
-        run: npm test -- --watchAll=false
-
-  selenium-ui:
-    runs-on: ubuntu-latest
-    needs: frontend-tests
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      - name: Install root tools
-        run: |
-          npm install --prefix frontend
-          npm install --save-dev selenium-webdriver chromedriver jest @jest/globals --prefix frontend
-      - name: Start backend
-        run: |
-          npm install --prefix backend
-          node backend/server.js &
-        env:
-          PORT: 5000
-      - name: Start frontend
-        run: |
-          npm start --prefix frontend &
-        env:
-          CI: true
-          REACT_APP_BASE_URL: http://localhost:5000/api
-      - name: Wait for services
-        run: |
-          npx wait-on http://localhost:3000 http://localhost:5000
-      - name: Run selenium tests
-        run: |
-          node tests/selenium/login_signup.test.js
-          node tests/selenium/event_flow.test.js
-        env:
-          REACT_APP_BASE_URL: http://localhost:5000/api
+        
+      - name: "Build: Frontend build"
+        run: npm run build
+        working-directory: frontend
+        
+      # Test: Unit tests
+      - name: "Test: Run unit tests"
+        run: npm run test:ci
+        working-directory: frontend
+        
+      # Analysis: Lint and audit (non-blocking)
+      - name: "Analysis: Frontend lint"
+        run: npm run build 2>&1 | grep -E "(warning|error)" || echo "No lint issues found"
+        working-directory: frontend
+        continue-on-error: true
+        
+      - name: "Analysis: Security audit"
+        run: npm audit --audit-level high || echo "Audit completed with findings"
+        working-directory: frontend
+        continue-on-error: true
